# PlantGeneration

./: .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/src/: main.cpp
LSystem/: CMakeLists.txt
cmake/: FindGlm.cmake  cerealConfig.cmake  imgui.cmake
editor/: CMakeLists.txt
editor/src/: LSystemWindow.cpp  LSystemWindow.hpp  OperationDatabase.cpp  OperationDatabase.hpp  Tree.cpp  Tree.hpp  TreeEditWindow.hpp  Trees.hpp  main.cpp
game/: CMakeLists.txt
game/src/: debug.hpp  main.cpp  player.cpp  player.hpp  sphere_world.cpp  sphere_world.hpp  target.cpp  target.hpp  types.cpp  types.hpp
lsys/: CMakeLists.txt
lsys_editor/: CMakeLists.txt
lsystem/: CMakeLists.txt
lsystem/include/LSystem/: BranchInstruction.hpp  Connection.hpp  Forward.hpp  Instruction.hpp  InstructionPool.hpp  LSystem.hpp  Modifier.hpp  MoveInstruction.hpp  Operation.hpp  OperationDatabase.hpp  OperationOwner.hpp  Parameter.hpp  ParameterList.hpp  ParameterOwner.hpp  Plant.hpp  RecurseInstruction.hpp  RenderBuffer.hpp  Rule.hpp  RuleSet.hpp  TreeModel.hpp  VertexBuffer.hpp
lsystem/include/LSystem/Operations/: ColoringOperation.hpp  ExtrudeOperation.hpp  FanOperation.hpp  ForkOperation.hpp  LoopOperation.hpp  PhyllotaxisOperation.hpp  RadiusOperation.hpp  RandomColorOperation.hpp  RandomLengthOperation.hpp  Registration.hpp  ScaleOperation.hpp  StartOperation.hpp
lsystem/include/LSystem/Parameters/: BoolParameter.hpp  ColorParameter.hpp  FloatParameter.hpp  IntParameter.hpp  Registration.hpp
lsystem/include/LSystem/Utils/: Hash.hpp  Identifier.hpp  MapRange.hpp  NoCopy.hpp  NoMove.hpp  Serialization.hpp
lsystem/src/: Instruction.cpp  LSystem.cpp  Modifier.cpp  Operation.cpp  OperationDatabase.cpp  OperationOwner.cpp  Parameter.cpp  ParameterList.cpp  ParameterOwner.cpp  Plant.cpp
lsystem/src/Operations/: ColoringOperation.cpp  ExtrudeOperation.cpp  FanOperation.cpp  ForkOperation.cpp  LoopOperation.cpp  PhyllotaxisOperation.cpp  RadiusOperation.cpp  RandomColorOperation.cpp  RandomLengthOperation.cpp  ScaleOperation.cpp  StartOperation.cpp
lsystem/src/Parameters/: BoolParameter.cpp  ColorParameter.cpp  FloatParameter.cpp  IntParameter.cpp
lsystem/src/Utils/: Identifier.cpp
plant-editor/: CMakeLists.txt  README.md
plant-editor/src/: main.cpp
plant-editor/src/Controllers/: ModelController.cpp  ModelController.hpp
plant-editor/src/Widgets/: MainWindow.cpp  MainWindow.hpp  Node.cpp  Node.hpp  NodeEditorWidget.cpp  NodeEditorWidget.hpp
plants/: june-15.plant  june-16.plant
resources/: CMakeLists.txt  Plant1.plant
resources/shaders/: test.frag
src/: debug.cpp  debug.hpp  main.cpp  types.hpp
